tests/machine/x/c/list_nested_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/list_nested_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:40:31: error: incompatible types when initializing type ‘int *’ using type ‘list_int’
   40 |   list_int tmp1_data[] = {{2, tmp2}, {2, tmp3}};
      |                               ^~~~
/workspace/mochi/tests/machine/x/c/list_nested_assign.c:40:42: error: incompatible types when initializing type ‘int *’ using type ‘list_int’
   40 |   list_int tmp1_data[] = {{2, tmp2}, {2, tmp3}};
      |                                          ^~~~

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
