tests/machine/x/c/list_nested_assign.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int main() {
  list_int tmp2 = list_int_create(2);
  tmp2.data[0] = 1;
  tmp2.data[1] = 2;
  list_int tmp3 = list_int_create(2);
  tmp3.data[0] = 3;
  tmp3.data[1] = 4;
  list_int tmp1_data[] = {{2, tmp2}, {2, tmp3}};
  list_list_int tmp1 = {2, tmp1_data};
  list_list_int matrix = tmp1;
  matrix.data[1].data[0] = 5;
  printf("%d\n", matrix.data[1].data[0]);
  return 0;
}
